--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,38 @@
 :root {
-  --mainColor: #f7146b;
-  --secondaryColor: #fef3f9;
+  --mainColor: #099a57;
+  --secondaryColor: #06c167;
   --black: #1d1d1b;
   --white: #fff;
+  --titleFont: "Montserrat", sans-serif;
+  --textFont: "Roboto", sans-serif;
   --spacingSmall: 1rem;
   --spacingMedium: 2rem;
   --spacingLarge: 4rem;
 }
 
+body {
+  font-family: var(--textFont);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--titleFont);
+}
+
 .container {
   padding: var(--spacingMedium);
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background: linear-gradient(
+    to bottom right,
+    rgba(9, 154, 87, 0.15),
+    #fff,
+    rgba(9, 154, 87, 0.15)
+  );
 }
 
 .filterSection {
@@ -22,17 +43,21 @@
 .filterSection h2 {
   text-align: center;
   color: var(--mainColor);
-  font-size: 2rem;
-  font-weight: 600;
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: var(--spacingMedium);
 }
 
 .filterSection p {
   text-align: center;
+  margin-bottom: var(--spacingSmall);
+  font-size: 1.2rem;
 }
 
 .filterList {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   margin-top: var(--spacingSmall);
   gap: var(--spacingSmall);
 }
@@ -40,9 +65,9 @@
 .filterBtn {
   height: 40px;
   width: 100px;
-  background-color: var(--secondaryColor);
+  background-color: transparent;
   border: 2px solid var(--mainColor);
-  color: var(--black);
+  color: var(--mainColor);
   border-radius: 5px;
   font-weight: 600;
   cursor: pointer;
@@ -77,9 +102,50 @@
 }
 
 .restaurantCard {
-  width: 200px;
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 380px;
   border: 2px solid var(--black);
   border-radius: 5px;
   padding: var(--spacingSmall);
+
+  .imgContainer {
+    max-width: 100%;
+    height: 180px;
+    overflow: hidden;
+
+    img {
+      min-width: 100%;
+      min-height: 100%;
+      border-radius: 2px;
+    }
+  }
+
+  h3 {
+    color: var(--mainColor);
+    font-weight: 700;
+    margin: 8px 0;
+  }
+
+  p {
+    margin-bottom: 8px;
+  }
+
+  button {
+    width: 100%;
+    padding: 8px;
+    background: var(--mainColor);
+    color: var(--white);
+    border-radius: 5px;
+    border: 2px solid var(--mainColor);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+    margin-top: auto;
+
+    &:hover {
+      background: var(--secondaryColor);
+      border: 2px solid var(--secondaryColor);
+    }
+  }
 }
