--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,71 @@ h6 {
   }
 }
 
+.formSection {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: var(--spacingMedium) var(--spacingSmall);
+
+  h2 {
+    margin-bottom: 1rem;
+  }
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 600px;
+  margin-top: 2rem;
+
+  label,
+  legend {
+    font-weight: 600;
+  }
+
+  input,
+  fieldset {
+    border: 2px solid var(--black);
+    border-radius: 5px;
+    padding: 4px 8px;
+    margin-bottom: 1rem;
+
+    &:focus {
+      border: 2px solid var(--mainColor);
+    }
+  }
+
+  fieldset {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  fieldset label {
+    font-weight: 400;
+  }
+
+  button {
+    width: 180px;
+    height: 2.5rem;
+    margin: 0 auto;
+    border: 2px solid var(--mainColor);
+    background: var(--mainColor);
+    color: var(--white);
+    border-radius: 5px;
+    margin-top: 1rem;
+    cursor: pointer;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      background: transparent;
+      color: var(--mainColor);
+    }
+  }
+}
+
 @media screen and (max-width: 547px) {
   .container {
     padding: var(--spacingMedium) var(--spacingSmall);
