changed style of the like btn

--- a/styles/style.css
+++ b/styles/style.css
@@ -31,22 +31,21 @@ h6 {
 }
 
 .container {
-  padding: var(--spacingMedium);
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(
-    to bottom right,
-    rgba(9, 154, 87, 0.15),
-    #fff,
-    rgba(9, 154, 87, 0.15)
-  );
 }
 
 .filterSection,
 .blogIntro {
   display: flex;
   flex-direction: column;
+  padding: var(--spacingLarge) var(--spacingMedium) var(--spacingMedium);
+  background: linear-gradient(
+    to bottom right,
+    rgba(9, 154, 87, 0.15),
+    #fff,
+    rgba(9, 154, 87, 0.15)
+  );
 }
 
 .filterSection h2,
@@ -97,6 +96,16 @@ h6 {
   color: var(--white);
 }
 
+.restaurantsSection {
+  padding: 0 var(--spacingMedium) var(--spacingLarge);
+  background: linear-gradient(
+    to bottom left,
+    rgba(9, 154, 87, 0.15),
+    #fff,
+    rgba(9, 154, 87, 0.15)
+  );
+}
+
 .restaurantsSection h3,
 .articlesSection h3 {
   text-align: center;
@@ -108,7 +117,7 @@ h6 {
   flex-wrap: wrap;
   justify-content: center;
   gap: var(--spacingSmall);
-  padding-top: var(--spacingMedium);
+  padding: var(--spacingMedium) 0 0;
 }
 
 .restaurantCard {
@@ -176,10 +185,18 @@ h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--spacingLarge) var(--spacingSmall);
+  padding: var(--spacingLarge) var(--spacingMedium);
+  background: linear-gradient(
+    to bottom right,
+    rgba(9, 154, 87, 0.15),
+    #fff,
+    rgba(9, 154, 87, 0.15)
+  );
 
   h2 {
     margin-bottom: 1rem;
+    color: var(--mainColor);
+    font-size: 2rem;
   }
 }
 
@@ -189,6 +206,11 @@ form {
   width: 600px;
   margin-top: 2rem;
   width: clamp(300px, 100%, 600px);
+  padding: var(--spacingMedium);
+  border: 2px solid var(--mainColor);
+  border-radius: 5px;
+  background: rgba(255, 255, 255, 0.3);
+
   label,
   legend {
     font-weight: 600;
@@ -245,6 +267,19 @@ form {
   }
 }
 
+.articlesSection {
+  background: linear-gradient(
+    to bottom left,
+    rgba(9, 154, 87, 0.15),
+    #fff,
+    rgba(9, 154, 87, 0.15)
+  );
+
+  h3 {
+    font-size: 1.5rem;
+  }
+}
+
 .articlesContainer {
   padding: var(--spacingMedium) var(--spacingSmall);
   display: flex;
@@ -264,10 +299,13 @@ form {
 
   .articleImgContainer {
     width: 100%;
-    height: 300px;
+    max-height: 300px;
     overflow: hidden;
     border-radius: 5px;
     margin-bottom: var(--spacingSmall);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   h4 {
     font-size: 1.3rem;
@@ -281,29 +319,38 @@ form {
   }
 
   .likeSection {
-    height: 16px;
-    margin-top: 8px;
+    height: fit-content;
+    margin: 0.75rem 0 -1rem;
     display: flex;
     align-items: baseline;
     gap: 4px;
+    font-style: normal;
   }
 }
 
-.fa-thumbs-up {
-  font-weight: 900;
+.likeBtn {
+  background: var(--white);
+  color: var(--black);
+  padding: 4px;
+  border-radius: 50%;
+  transition: 0.3s ease;
+}
+
+.likeBtn i {
+  font-weight: 500;
   font-size: 1.2rem;
   transition: 0.3s ease;
   cursor: pointer;
 }
 
-.likeBtn.green {
-  color: var(--mainColor);
+.likeBtn i:hover {
+  transform: scale(1.1);
 }
 
-@media screen and (max-width: 547px) {
-  .container {
-    padding: var(--spacingMedium) var(--spacingSmall);
-  }
+.likeBtn.green {
+  background: var(--mainColor);
+  color: var(--white);
+  font-weight: 600;
 }
 
 .banner {
@@ -392,7 +439,6 @@ form {
   .navBar {
     position: absolute;
     margin-right: auto;
-    /* Permet d’utiliser absolute pour le menu */
   }
 
   .classButton {
@@ -440,7 +486,6 @@ form {
     align-items: center;
     text-align: center;
     position: static;
-    /* Annule le positionnement absolu */
   }
 
   .footerClass ul {
