--- a/styles/style.css
+++ b/styles/style.css
@@ -322,6 +322,7 @@ form {
   .articleDate {
     font-style: italic;
     margin-bottom: 0.5rem;
+    color: rgba(0, 0, 0, 0.6);
   }
 
   .likeSection {
@@ -455,38 +456,54 @@ form {
 }
 
 .footerClass {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 20px;
   background-color: var(--mainColor);
-  color: white;
+  color: var(--white);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  height: 100px;
 }
 
 .footerClass ul {
   display: flex;
-  gap: 10px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  left: 20px;
+  justify-content: flex-start;
+  gap: 30px;
 }
 
-.footerClass i {
-  width: 4vh;
-  height: 4vh;
-  margin-top: 8px;
-  object-fit: cover;
+.footerClass ul li {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.githubLinks {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+
+  i {
+    font-size: 1.2rem;
+  }
+}
+
+.fa-linkedin {
+  font-size: 1.5rem;
+}
+
+.fa-square-facebook {
+  font-size: 1.5rem;
+}
+
+.fa-instagram {
+  font-size: 1.5rem;
 }
 
 .footerClass p {
-  width: 100%;
-  margin-top: 20px;
-  font-size: 14px;
   text-align: center;
-  margin: 0 auto;
+  margin-top: 0;
 }
 
 .input-control {
@@ -590,13 +607,8 @@ form {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    position: static;
-  }
-
-  .footerClass ul {
-    gap: 15px;
-    position: static;
-    margin: auto;
+    height: fit-content;
+    gap: 1rem;
   }
 
   .footerClass i {
@@ -606,7 +618,10 @@ form {
 
   .footerClass p {
     font-size: 0.8rem;
-    margin-top: 10px;
+  }
+
+  .copyright {
+    order: 3;
   }
 }
 
@@ -630,42 +645,5 @@ form {
   .menu-burger {
     margin-left: auto;
     justify-content: flex-end;
-  }
-
-  .footerClass {
-    flex-direction: row;
-    justify-content: space-between;
-    text-align: center;
-    height: 100px;
-  }
-
-  .footerClass ul {
-    justify-content: flex-start;
-    align-items: baseline;
-    margin-bottom: 0;
-    gap: 20px;
-  }
-
-  .footerClass ul li {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  .fa-linkedin {
-    font-size: 1.5rem;
-  }
-
-  .fa-square-facebook {
-    font-size: 1.5rem;
-  }
-
-  .fa-instagram {
-    font-size: 1.5rem;
-  }
-
-  .footerClass p {
-    text-align: center;
-    margin-top: 0;
   }
 }
